feat: gorm integrate
